2009-06-14  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/bitc/Makefile.am:
	* plugins/subtitleformats/bitc/bitc.cc:
	* plugins/subtitleformats/bitc/bitc.se-plugin.in:
	* plugins/subtitleformats/bitc/dialog-bitc.glade:
	Introduce new subtitle format: BITC. Fix bug #12858.

2009-06-12  kitone  <kitone@gna.org>

	* plugins/actions/command/command.cc:
	Fix small typo.

2009-06-09  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/actions/Makefile.am:
	Introduce new plugin 'timingfromplayer'.

	* share/menubar.xml:
	* plugins/actions/timingfromplayer/Makefile.am:
	* plugins/actions/timingfromplayer/timingfromplayer.cc:
	* plugins/actions/timingfromplayer/timingfromplayer.se-plugin.in:
	New plugin to define the subtitle time from the player position. This
	plugin is extract from videoplayermanagement (see previous commit) with a 
	new action 'Set Subtitle Start and End'. Fix bug #12570.

2009-06-09  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	Remove actions 'Set Subtitle Start' and 'Set Subtitle End' of the videoplayermanagement plugin.

2009-06-09  kitone  <kitone@gna.org>

	* plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc:
	* plugins/subtitleformats/substationalpha/substationalpha.cc:
	Make reading more robust to the files invalid. Fix bug #13656.

2009-06-09  kitone  <kitone@gna.org>

	* src/filereader.cc:
	* src/filereader.h:
	New function get_lines.

2009-06-05  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2009-06-03  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.32.0 release.

2009-06-02  kitone  <kitone@gna.org>

	* share/Makefile.am:
	Fix: Install icon to the pixmaps directory.

2009-06-01  kitone  <kitone@gna.org>

	* src/spellchecker.cc:
	Use enchant_dict_add instead of enchant_dict_add_to_pwl (deprecated).

2009-06-01  kitone  <kitone@gna.org>
